# mindbox_pyspark_products

./: .gitignore  README.md  main.py  pyproject.toml
pyspark_products/: analyzer.py  utils.py
tests/: test_analyzer.py
