[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyspark-products"
version = "0.1.0"
description = "Анализ соответствий продуктов и категорий с помощью PySpark"
authors = [{ name="Dary", email="latiennetendresse@gmail.com" }]
requires-python = ">=3.9"
dependencies = [
    "pyspark>=3.3.0"
]

[project.optional-dependencies]
dev = ["pytest"]
